Fixed vertical alignment for overall page.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 /* TODO: Find a nice, handwriting-styled font for the nav bar. */
+/*
+    Do not change height, margins, or padding for nav, div#content-container,
+    or footer. It will make the site not fit the the screen. Use margins for
+    the elements inside them instead.
+*/
 
 :root{
     /* Use color variables instead of using actual values in rules. */
@@ -27,34 +32,39 @@
     margin: 0px;
 }
 
+html{
+    height: 100%;
+}
+
 body{
     background-color: var(--content-bg-color);
     color: var(--content-fg-color);
     font-family: sans-serif;
+    height: 100%;
 }
 
 nav{
-    width: 100%;
     background-color: var(--nav-bg-color);
     background-opacity: 50%;
     text-align: center;
     color: var(--nav-fg-color);
-    padding: 0.5%;
+    min-height: 10%;
 }
 
 nav h3{
     float:left;
     display: inline-block;
     width: 20%;
+    margin: 1.5%;
 }
 
 nav a{
     text-decoration: none;
     color: var(--nav-accent-color);
-    padding: 5px;
     display: inline-block;
-    border: solid 1px var(--nav-bg-color);
+    border: solid 1px var(--nav-accent-color);
     border-radius: 10%;
+    padding: 1%;
 }
 
 nav a:hover{
@@ -63,13 +73,14 @@ nav a:hover{
     border-color: var(--nav-accent-color);
 }
 
-section#content{
-    padding: 1%
+div#content-container{
+    min-height: 80%;
 }
 
 footer{
     background-color: var(--footer-bg-color);
     color: var(--footer-fg-color);
+    height: 10%;
 }
 
 footer a{
